<resources>
    <string name="app_name">Practical_8</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="desserts_shop">Desserts Shop</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy</string>
    <string name="cupcakes">Cupcake is creamy and spongy</string>
    <string name="icecream_roll">Ice Cream roll is cold and tasty</string>
    <string name="pastry">Pastry is yummy and chocolaty</string>
    <string name="donut_order_message">You Ordered Donut</string>
    <string name="cupcake_order_message">You Ordered Cupcake</string>
    <string name="icecream_roll_order_message">You Ordered Ice-cream Roll</string>
    <string name="pastry_order_message">You Ordered Pastry</string>
    <string name="shopping_cart">TODO</string>
    <string name="string_shopping_cart">shopping_cart</string>
    <string name="string_string_shopping_cart" />
    <string name="string_string_string_shopping_cart">todo</string>
    <string name="order_textview">TextView</string>
    <string name="order_label_text">order_label_text</string>
    <string name="name_label_view">Name</string>
    <string name="address_label_text">address_label_text</string>
    <string name="name_label_text">name_label_text</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="name">Name</string>
    <string name="address_text">Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="phone">Phone</string>
    <string name="enter_your_phone_number">Enter Phone</string>
    <string name="note">Note</string>
    <string name="enter_note">Enter Note</string>
    <string name="choose_a_delivery_method">Choose a Delivery Method:</string>
    <string name="pick_up">Pick Up</string>
    <string name="next_day_ground_delivery">Next Day Ground Delivery</string>
    <string name="same_day_messenger_service">Same Day Messenger Service</string>
    
    <string-array name="label_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>